# chatbot-for-tracking-habits

./: .env  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 00b781ff006c_initial_tables_1.py  0c622d42c20c_remove_created.py  1d582396e33e_init.py  476e1573437b_fix_created_at_null.py  63a32f5aa94a_initial_tables.py  89267620229c_initial_tables_2.py  90d45beda49b_remove_created_at_column.py  c6c8ea5db408_make_created_at_nullable.py
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
backend/app/services/: habit_manager.py
bot/: Dockerfile  main.py  pyproject.toml
bot/handlers/: habits.py
bot/services/: api.py
