[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for Habit Tracker"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
httpx = "^0.27.0"
apscheduler = "^3.8.0"
python-telegram-bot = "^22.0"
python-dotenv = "^1.0.0"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"